fix(videoshanging): had to remove video from dom if it was offscreen

--- a/src/components/VideoTile.module.css
+++ b/src/components/VideoTile.module.css
@@ -6,6 +6,7 @@
 .videoTile video {
   width: 100%;
   max-height: 600px;
+  min-height: 378px;
 }
 
 .hidden {
@@ -19,6 +20,9 @@
 .videoContent {
   padding: 2rem 4rem 0rem;
   margin: auto;
+  position: relative;
+}
+.videoWrapper {
   position: relative;
 }
 .videoContentControls {
